test/tests/compiler/11_long_integers/valid/libraries/long_global_var.plx
pub l: i64 = 8589934592l #  2^33

pub fn return_l(none) i64 {
    return l
}

pub fn return_l_as_int(none) i32 {
    return l
}
