test/tests/compiler/11_long_integers/invalid_parse/bad_specifiers.plx
pub fn main(none) i32 {
    # Cannot declare a variable with two "int" specifiers
    i: i32 i64 = 0
    return i
}
